--- a/app/components/board/boardTemplate.html
+++ b/app/components/board/boardTemplate.html
@@ -1,7 +1,7 @@
 <table>
     <tr ng-repeat="rows in board.tableData | orderBy:'-' track by $index">
         <td ng-repeat="val in rows track by $index">
-            {{val}}
+            {{val}} + {{$index}} + {{$parent.$index}}
         </td>
     </tr>
 </table>
