--- a/app/components/board/boardTemplate.html
+++ b/app/components/board/boardTemplate.html
@@ -2,6 +2,8 @@
     <tr ng-repeat="rows in board.tableData | orderBy:'-' track by $index">
         <td ng-repeat="val in rows track by $index">
             {{val}} + {{$index}} + {{$parent.$index}}
+            <img src='assets/img/bluepiece.jpg' class='bluepieceimg' ng-show='val==0'>
+            <img src='assets/img/redpiece.jpg' class='redpieceimg' ng-show='val==1'>
         </td>
     </tr>
 </table>
