--- a/app/components/board/boardTemplate.html
+++ b/app/components/board/boardTemplate.html
@@ -1,6 +1,7 @@
+<!--<div>{{board.tableData}}</div>-->
 <table>
-    <tr ng-repeat="rows in board.tableData | orderBy:'-' track by $index">
-        <td ng-repeat="val in rows track by $index">
+    <tr ng-repeat="rows in board.tableData track by $index">
+        <td ng-repeat="val in rows track by $index" ng-click="board.playerMove($index)">
             {{val}} + {{$index}} + {{$parent.$index}}
             <img src='assets/img/bluepiece.jpg' class='bluepieceimg' ng-show='val==0'>
             <img src='assets/img/redpiece.jpg' class='redpieceimg' ng-show='val==1'>
