--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,12 @@ td {
     height: 50px;
 }
 
+.activeCol {
+    background-color: lightblue;
+    
+    
+}
+
 .bluepieceimg,.redpieceimg {
     width: 25px;
     height: 25px;
