Major UI changes

--- a/app/components/board/boardTemplate.html
+++ b/app/components/board/boardTemplate.html
@@ -1,8 +1,12 @@
 <!--<div>{{board.tableData}}</div>-->
 <table>
     <tr ng-repeat="rows in board.tableData track by $index">
-        <td ng-repeat="val in rows track by $index" ng-click="board.playerMove($index)" ng-mouseover="board.hoveredCol = $index" ng-mouseleave="board.hoveredCol = -1" ng-class="$index == board.hoveredCol ? 'activeCol' : 'inactiveCol'">
-            {{val}} + {{$index}} + {{$parent.$index}}
+        <td ng-repeat="val in rows track by $index" ng-click="board.playerMove($index)"
+            ng-mouseover="board.hoveredCol = $index" ng-mouseleave="board.hoveredCol = -1"
+            ng-class="$index == board.hoveredCol ? 'activeCol' : 'inactiveCol'">
+
+            <img src='assets/img/bluepiece.jpg' class='ghostpieceimg'
+                 ng-show='board.isGhostPos($parent.$index,$index)'>
             <img src='assets/img/bluepiece.jpg' class='bluepieceimg' ng-show='val==0'>
             <img src='assets/img/redpiece.jpg' class='redpieceimg' ng-show='val==1'>
         </td>
