--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,11 +14,15 @@ td {
 
 .activeCol {
     background-color: lightblue;
-    
-    
+}
+
+.ghostpieceimg {
+    opacity: 0.2;
+    width: 35px;
+    height: 35px;
 }
 
 .bluepieceimg,.redpieceimg {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
 }
